# magnatune-android

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NOTICE.md
app/src/main/cpp/raop/: alac_raw.c  cross_log.c  md5.c  md5.h  raop_client.c  raop_client.h  raop_jni.c  rtsp_client.c
app/src/main/cpp/raop/curve25519/: sha512.c
app/src/main/java/com/magnatune/player/: MagnatuneApp.kt  MainActivity.kt
app/src/main/java/com/magnatune/player/data/: AppContainer.kt  CatalogSync.kt  Credentials.kt  DownloadManager.kt  Settings.kt
app/src/main/java/com/magnatune/player/db/: CatalogStore.kt  UserDb.kt  UserStore.kt
app/src/main/java/com/magnatune/player/model/: Models.kt
app/src/main/java/com/magnatune/player/net/: UrlBuilder.kt
app/src/main/java/com/magnatune/player/peer/: AirPlay2Session.kt  AirPlayDiscovery.kt  AirPlayRouter.kt  BPlist.kt  CastOptionsProvider.kt  PeerService.kt  RaopNative.kt  RaopSession.kt  Tlv8.kt
app/src/main/java/com/magnatune/player/service/: CrossfadePlayer.kt  PlaybackController.kt  PlaybackService.kt
app/src/main/res/drawable/: ic_airplay.xml  ic_dislike_light.xml  ic_dislike_solid.xml  ic_download.xml  ic_heart_light.xml  ic_heart_solid.xml  ic_launcher_foreground.xml  ic_playlist_add.xml  ic_playlist_remove.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
design/: magnatune-mascot.psd
gradle/wrapper/: gradle-wrapper.properties
(+22 files in other folders)
